# Lambdas

./: CMakeLists.txt  main.cpp
include/: header.hpp
test/: main_gtest.cpp  test_widget.cpp
